kubernetes/backend-deuxieme-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-deuxieme-service
spec:
  selector:
    app: backend-deuxieme-service
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
